--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ header {
 }
 
 header > h1 {
-    margin: 40px 0px 0px 50px;
+    max-width: 500px;
+    margin: 40px 0px 0px 30px;
     text-shadow: 3px 3px 5px black;
 }
 
